--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,7 @@
+body {
+  font-family: "Unica One", sans-serif;
+}
+
 #rainbow-violet {
   animation: offset 2s linear forwards;
   stroke-dasharray: 1917.692px;
@@ -46,16 +50,39 @@
   stroke-dashoffset: 1982px;
 }
 
+#narwhal-eye {
+  animation: narwhals-eye 2s linear forwards;
+  opacity: 1;
+}
+
 @keyframes outline-narwhal {
+
   to {
     stroke-dashoffset: 0;
-
   }
 
 }
 
 @keyframes offset {
+
   to {
     stroke-dashoffset: 0;
   }
+
+}
+
+@keyframes narwhals-eye {
+
+  0% {
+    opacity: 0;
+  }
+
+  50% {
+    opacity: 0;
+  }
+
+  100% {
+    opacity: 1;
+  }
+
 }
